[package]
name = "multi_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mylib = {path="mylib"}

[[bin]]
name = "server"
path = "cmd/server/src/main.rs"

[workspace]
members = [
    "cmd/client"
]